--- a/changelog.txt
+++ b/changelog.txt
@@ -25,3 +25,7 @@ May 7th 2013
 - Added two mail icons that integrate with a the gmail.lua
 module in the vicious library.
 - Added an extra icon (mailopen.png) that indicates when you have new mail.
+
+May 8th 2013
+------------
+- Included snippets of my original rc.lua
